[gd_scene load_steps=20 format=3 uid="uid://bh4jtxaokddii"]

[ext_resource type="Texture2D" uid="uid://dmidbglr33uuu" path="res://Assets/assets/Obelisk_effects.png" id="1_jw675"]
[ext_resource type="Script" path="res://Util/Checkpoint/Checkpoint.gd" id="1_tbn6b"]
[ext_resource type="PackedScene" uid="uid://c0x6nmsswmoev" path="res://Util/Interaction/InteractableArea.tscn" id="2_nrs6m"]
[ext_resource type="PackedScene" uid="uid://3wvvolcwvsk7" path="res://Util/Checkpoint/CheckpointMenu.tscn" id="4_hcgh8"]

[sub_resource type="Animation" id="Animation_5eqra"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dt16p"]
resource_name = "activated"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_jw675")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.65, 0.75, 0.8, 0.85, 0.9, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 11, 10, 9, 8, 13]
}

[sub_resource type="Animation" id="Animation_3idtc"]
resource_name = "active"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_jw675")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 0, 13, 13]
}

[sub_resource type="Animation" id="Animation_i03kg"]
resource_name = "inactive"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_jw675")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o54fs"]
_data = {
"RESET": SubResource("Animation_5eqra"),
"activated": SubResource("Animation_dt16p"),
"active": SubResource("Animation_3idtc"),
"inactive": SubResource("Animation_i03kg")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_goks8"]
animation = &"activated"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_br52y"]
animation = &"active"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vyeso"]
animation = &"inactive"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y1vkx"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h7bl0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yrcrd"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_j38sx"]
states/activated/node = SubResource("AnimationNodeAnimation_goks8")
states/activated/position = Vector2(668.667, 226)
states/active/node = SubResource("AnimationNodeAnimation_br52y")
states/active/position = Vector2(609.333, 99.8519)
states/inactive/node = SubResource("AnimationNodeAnimation_vyeso")
states/inactive/position = Vector2(464, 144.667)
transitions = ["Start", "inactive", SubResource("AnimationNodeStateMachineTransition_y1vkx"), "inactive", "activated", SubResource("AnimationNodeStateMachineTransition_h7bl0"), "activated", "active", SubResource("AnimationNodeStateMachineTransition_yrcrd")]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_anw0a"]
radius = 55.0
height = 110.0

[sub_resource type="Gradient" id="Gradient_ht7po"]
offsets = PackedFloat32Array(0, 0.638425)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lofgj"]
gradient = SubResource("Gradient_ht7po")
width = 256
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Checkpoint" type="Node2D" groups=["checkpoint"]]
script = ExtResource("1_tbn6b")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 7)
scale = Vector2(0.328947, 0.298684)
texture = ExtResource("1_jw675")
hframes = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o54fs")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o54fs")
}
tree_root = SubResource("AnimationNodeStateMachine_j38sx")
anim_player = NodePath("../AnimationPlayer")

[node name="InteractableArea" parent="." instance=ExtResource("2_nrs6m")]
action_name = "Commune"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(0, 25)
shape = SubResource("CapsuleShape2D_anw0a")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(5.68434e-14, 32)
scale = Vector2(1.40625, 1.21875)
color = Color(0, 1, 1, 1)
energy = 1.2
range_z_max = 150
shadow_enabled = true
texture = SubResource("GradientTexture2D_lofgj")

[node name="CheckpointMenu" parent="." instance=ExtResource("4_hcgh8")]
offset_left = 0.0
offset_top = -108.0
offset_right = 0.0
offset_bottom = -108.0

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
